# checkmydata-ai

./: .dockerignore  .gitignore  API.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DESIGN_SYSTEM.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  FAQ.md  INSTALLATION.md  LICENSE  Makefile  PRODUCT.md  Procfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  USAGE.md  docker-compose.yml  heroku.yml  vision.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e5084fdfb86_request_trace_routing_columns_c_g.py  2317bf9d9126_sync_remediation_schema_qualified_.py  5f9fe870b98c_hardening_indexes_fk_constraints.py  68aa15e554e2_add_failed_doc_paths_to_project_cache.py  760604aa1803_query_failures_table.py  7968486e00a3_add_heartbeat_at_to_summary_and_.py  9484986f0562_add_users.py  9ff3cede6d84_db_index_capture_fields_c_d.py  a1b2c3d4e5f6_add_tool_calls_json_to_chat_messages.py  a1f2b3c4d5e6_add_indexing_runs_and_error_log.py  a2b3c4d5e6f7_add_picture_url_to_users.py  a3f7c8d912b4_add_indexing_checkpoint.py  a4b5c6d7e8f9_add_pipeline_runs_table.py  a5b6c7d8e9f0_add_deactivated_at_to_session_notes.py  a7b3e1f20d84_add_branch_and_rag_feedback.py  a7c8d9e0f1a2_r4_auth_lifecycle_audit.py  a8b9c0d1e2f3_add_schema_fingerprint_to_summary.py  b1l2l3i4n5g6_add_billing_tables.py  b2c3d4e5f6a7_add_ssh_exec_mode_to_connections.py  b3c4d5e6f7g8_add_token_usage_table.py  b3c8f2a71e56_add_project_cache_and_rag_commit_sha.py  b4c5d6e7f8g9_add_max_orchestrator_steps.py  b6c7d8e9f0a1_add_append_only_checkpoint_tables.py  c2d3e4f5g6h7_add_knowledge_sync_runs.py  c5d6e7f8g9h0_add_section_hashes_to_project_cache.py  c5f1d9e23a01_add_user_rating_to_chat_messages.py  c6d7e8f9g0h1_add_can_create_projects_to_users.py  c7d2e8f31a45_add_cascade_delete_to_project_fks.py  c7d8e9f0a1b2_add_tenancy_hot_path_indexes.py  c9b8a7f6e5d4_add_column_mismatch_json_to_code_db_sync.py  cc9678c75544_initial.py  d1e2f3g4h5i6_add_is_onboarded_to_users.py  d3e4f5g6h7i8_add_mcp_api_keys_table.py  d4f015eb8a1c_add_user_id_to_ssh_keys.py  d5e6f7a8b9c0_add_deploy_state.py  d7e8f9g0h1i2_add_request_traces_tables.py  d8a2f4b19c73_add_project_members_invites_and_ownership.py  d8e9f0a1b2c3_add_code_graph_tables.py  d8e9f0g1h2i3_add_status_to_chat_sessions.py  e12901fc4e99_add_custom_rules.py  (+37 more)
backend/app/: config.py  main.py  worker.py
backend/app/agents/: __init__.py  adaptive_planner.py  answer_validator.py  base.py  context_loader.py  context_planner.py  data_gate.py  errors.py  git_agent.py  insight_feed_agent.py  intent_classifier.py  investigation_agent.py  knowledge_agent.py  mcp_source_agent.py  orchestrator.py  pipeline_learning.py  query_planner.py  response_builder.py  result_handler.py  result_validation.py  router.py  schema_context_builder.py  sql_agent.py  sql_result_reconciliation.py  stage_context.py  stage_executor.py  stage_validator.py  table_resolver.py  tool_dispatcher.py  validation.py  viz_agent.py
backend/app/api/: deps.py
backend/app/connectors/: base.py  cli_output_parser.py  clickhouse.py  exec_templates.py  mcp_client.py  mongodb.py  mysql.py  postgres.py  registry.py  ssh_exec.py  ssh_known_hosts.py  ssh_pre_commands.py  ssh_tunnel.py
backend/app/core/: action_engine.py  agent.py  agent_limiter.py  alert_evaluator.py  anomaly_intelligence.py  audit.py  auth_cookies.py  background.py  backup_manager.py  cache.py  connector_pools.py  context_budget.py  context_enricher.py  data_graph.py  data_sanity_checker.py  datetime_utils.py  distributed_lock.py  error_classifier.py  explain_validator.py  exploration_engine.py  health_monitor.py  heartbeat.py  history_trimmer.py  insight_generator.py  insight_memory.py  logging_config.py  loss_detector.py  metrics.py  opportunity_detector.py  orchestrator.py  post_validator.py  pre_validator.py  prompt_builder.py  query_builder.py  query_cache.py  query_repair.py  query_validation.py  rate_limit.py  reaper_loop.py  reconciliation_engine.py  (+22 more)
backend/app/eval/: __init__.py  golden_set.py  graph_benchmark.py  harness.py  retrieval_metrics.py
backend/app/knowledge/: ast_parser.py  bm25_index.py  chunk_metadata.py  chunker.py  code_clustering.py  code_db_sync_analyzer.py  code_db_sync_pipeline.py  code_graph.py  code_symbol_chunker.py  context_pack.py  context_pack_renderer.py  cross_source.py  custom_rules.py  db_index_completeness.py  db_index_pipeline.py  db_index_validator.py  doc_generator.py  doc_store.py  entity_extractor.py  file_splitter.py  git_inspector.py  git_tracker.py  graph_db_bridge.py  hybrid_retriever.py  indexing_pipeline.py  learning_analyzer.py  pii_scrubber.py  pipeline_runner.py  project_profiler.py  project_summarizer.py  repo_analyzer.py  repo_url.py  reranker.py  retrieval_degradation.py  run_manifests.py  schema_indexer.py  schema_retriever.py  shared_ignore.py  tokenizer_window.py  vector_store.py
backend/app/llm/: _system_messages.py  anthropic_adapter.py  base.py  errors.py  openai_adapter.py  openrouter_adapter.py  retry.py  router.py  usage_sink.py
backend/app/mcp_server/: __init__.py  __main__.py  asgi.py  auth.py  resources.py  runtime.py  server.py  tools.py
backend/app/models/: __init__.py  agent_learning.py  audit_log.py  backup_record.py  base.py  batch_query.py  benchmark.py  billing.py  chat_session.py  code_db_sync.py  code_graph.py  commit_index.py  connection.py  custom_rule.py  dashboard.py  data_validation.py  db_index.py  deploy_state.py  error_log.py  indexing_checkpoint.py  indexing_run.py  insight_record.py  knowledge_doc.py  knowledge_sync_run.py  learning_vote.py  mcp_api_key.py  metric_definition.py  notification.py  pipeline_run.py  project.py  project_cache.py  project_invite.py  project_member.py  query_failure.py  rag_feedback.py  repository.py  request_trace.py  saved_note.py  scheduled_query.py  session_note.py  (+3 more)
backend/app/ops/: embedding_reconcile.py
backend/app/pipelines/: __init__.py  base.py  database_pipeline.py  mcp_pipeline.py  (+1 more)
backend/tests/: conftest.py
(+976 files in other folders)
