[project]
name = "checkmydata-ai"
version = "0.1.0"
description = "AI-powered database agent with Git repo analysis, multi-DB support, and data visualization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "asyncssh>=2.18.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "motor>=3.6.0",
    "clickhouse-connect>=0.8.0",
    "gitpython>=3.1.44",
    "chromadb>=0.5.23",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.18",
    "websockets>=14.1",
    "openpyxl>=3.1.5",
    "google-auth>=2.0.0",
    "mcp>=1.2.0",
    "croniter>=2.0.0",
    "geoip2fast>=1.0.0",
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-croniter>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests (deselect with '-m \"not unit\"')",
    "integration: integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/mcp_server/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
