[project]
name = "checkmydata-ai"
version = "1.15.1"
description = "AI-powered database agent with Git repo analysis, multi-DB support, and data visualization"
readme = {text = "AI-powered database agent with Git repo analysis, multi-DB support, and data visualization", content-type = "text/plain"}
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "asyncssh>=2.18.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "motor>=3.6.0",
    "clickhouse-connect>=0.8.0",
    "gitpython>=3.1.44",
    "chromadb>=0.5.23",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.18",
    "websockets>=14.1",
    "openpyxl>=3.1.5",
    "google-auth>=2.0.0",
    "mcp==1.27.2",
    "croniter>=2.0.0",
    "geoip2fast>=1.0.0",
    "resend>=2.0.0",
    "tiktoken>=0.7.0",
    "stripe>=11.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    # Tree-sitter pinned to 0.23.x; tree-sitter-language-pack 0.7.x bundles
    # grammars compatible with that ABI. Newer versions of language-pack
    # (1.x) ship their own incompatible bindings that break Parser.parse().
    "tree-sitter>=0.23.0,<0.24",
    "tree-sitter-language-pack>=0.7.3,<1.0",
    "networkx>=3.2",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0.0",
    "arq>=0.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    # Linters/type-checkers are pinned to exact versions so CI stays
    # reproducible. Unpinned ranges let newer releases silently change the
    # formatter's output or add type-check rules, which breaks CI on commits
    # that never touched the affected code. Bump these deliberately.
    "ruff==0.15.15",
    "mypy==2.1.0",
    "types-croniter>=2.0.0",
]

[project.urls]
Homepage = "https://checkmydata.ai"
Repository = "https://github.com/CheckMyData-AI/checkmydata-ai"
Issues = "https://github.com/CheckMyData-AI/checkmydata-ai/issues"
Documentation = "https://github.com/CheckMyData-AI/checkmydata-ai#readme"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Auto-generated Alembic migrations: relax line-length and import ordering.
"alembic/versions/*.py" = ["E501", "I001", "F401", "W291"]
# Generic[T] is still valid Python; PEP 695 syntax is opt-in.
"app/core/ttl_cache.py" = ["UP046"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# pytest-asyncio 1.x ignores the old session-scoped ``event_loop`` fixture and
# defaults fixtures + tests to function-scoped loops. The integration suite
# shares a session-scoped engine whose in-memory SQLite (aiosqlite) connection
# is bound to the loop it was created on; with function-scoped test loops that
# connection is used from a different/closed loop → "Event loop is closed" /
# "no such table: users" cascades (Linux CI; macOS happened to tolerate it).
# Pin both fixtures and tests to one session loop so the shared engine stays
# valid for every test — restoring the pre-1.x behaviour.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: unit tests (deselect with '-m \"not unit\"')",
    "integration: integration tests (deselect with '-m \"not integration\"')",
    "smoke: fast deterministic startup smoke tests (run with 'pytest -m smoke')",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/mcp_server/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 72
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "DEPRECATED",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
